css/styles.css
*{
    padding:0;
    margin:0;
}
body{
    background-color: antiquewhite;
    font-size: 26px;
    text-align:left;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
.container{
    width: fit-content;
    height: fit-content;
    margin:auto auto;
    padding:0;
    border-radius:10px;
}
ul a:hover{
    text-decoration: none;
    color:red;
}
figure{
    background: linear-gradient(90deg,gray 0%,
    gray 30%,khaki 70%
    );
border-radius:20px;
 letter-spacing: 2px;
 margin-top: 25px;
}
ul li{
    list-style: none;
}
img{
    width:350px;
    height:400px;
}

